[package]
name = "textbelt"
version = "1.0.1"
authors = ["noodle <https://github.com/branoodle>", "g0h4n <https://github.com/g0h4n>"]
keywords = ["sms", "tokyo", "textbelt", "api"]
description = "The library for Textbelt API, use to send SMS!"
repository = "https://github.com/g0h4n/textbelt-rs"
homepage = "https://github.com/g0h4n/textbelt-rs"
documentation = "https://docs.rs/textbelt/"
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["std"] }
reqwest = { version = "0.13", features = ["json","multipart","blocking","rustls"] }
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = "1.0"
serde_derive = "1.0"